Refactor bot and guild fields to private (#3512)
* Refactor bot and guild fields to private

Changed visibility of userID and several Guild fields in AsyncTI4DiscordBot from public to private to improve encapsulation and restrict direct access.

* Refactor UnitKey to use getter methods

Replaces direct field access of UnitKey's unitType and colorID with getter methods (getUnitType, getColorID) throughout the codebase. This change improves encapsulation and prepares for future modifications to the UnitKey class, which is now a standard class instead of a record.

* F

* Refactor pattern usage and simplify constructors

Centralized common regex Patterns in a new PatternHelper utility class and replaced direct Pattern usage throughout the codebase. Simplified several class constructors by removing unnecessary public modifiers. Updated method signatures and usages for Argent Hero button handling to remove redundant event parameters. These changes improve code maintainability and consistency.

* Update Replace.java

* Refactor pattern usage and cleanup constructors

Moved commonly used regex patterns to PatternHelper for reuse, specifically the underscore pattern. Renamed pattern constants for clarity and removed unused patterns. Also updated constructors to use package-private visibility where appropriate.

* Refactor regex pattern names for clarity

Renamed regex Pattern constants in PlayerStatsHelper and RoundSummaryHelper to more descriptive names for improved code readability and maintainability. No functional changes were made.

* Update DraftErrataModel.java